# muurli

./: .gitignore  MANIFEST.in  README.md  example.json  example_small.json  extraction_prompt.txt  muurli.py  pyproject.toml  requirements.txt
muurli/: __init__.py
