[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "muurli"
version = "0.1.0"
description = "A CLI tool to fetch and display menu data from stadtmuur.ch for Raspberry Pi with E Ink display"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Stephan"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "beautifulsoup4==4.13.4",
    "blemli==0.0.10",
    "click==8.1.8",
    "icecream==2.1.4",
    "openai==1.75.0",
    "Pillow==11.2.1",
    "python-dotenv==1.1.0",
    "Requests==2.32.3",
    "rich==14.0.0",
]

[project.urls]
"Homepage" = "https://github.com/blemli/muurli"
"Bug Tracker" = "https://github.com/blemli/muurli/issues"

[project.scripts]
muurli = "muurli:muurli"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.setuptools]
packages = ["muurli"]
